// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ranking golden (max-yield) > produces stable top-N ordering per scenario under max-yield 1`] = `
{
  "broad-generic": [
    "icici-emeralde-private-metal",
    "indusind-pioneer-legacy",
    "hdfc-infinia-metal",
    "hsbc-premier",
    "kotak-infinite",
    "amex-gold",
    "hdfc-diners-club-black-metal",
    "axis-magnus-burgundy",
    "amex-membership-rewards",
    "sc-ultimate",
    "hdfc-marriott-bonvoy",
    "hsbc-travelone",
  ],
  "category-bill-payments": [
    "indusind-pioneer-legacy",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "hdfc-marriott-bonvoy",
    "sc-ultimate",
    "indusind-eazydiner",
    "amex-gold",
    "indigo-sbi-elite",
    "indusind-pinnacle",
    "phonepe-sbi-select-black",
    "hdfc-phonepe-ultimo",
    "sbi-card-pulse",
  ],
  "category-education-payments": [
    "icici-emeralde-private-metal",
    "indusind-pioneer-legacy",
    "hdfc-infinia-metal",
    "amex-membership-rewards",
    "amex-gold",
    "hdfc-marriott-bonvoy",
    "sc-ultimate",
    "hsbc-premier",
    "indusind-eazydiner",
    "axis-atlas",
    "hdfc-regalia-gold",
    "amex-platinum-travel",
  ],
  "category-rent": [
    "hsbc-premier",
    "amex-membership-rewards",
    "hsbc-travelone",
    "amex-platinum-travel",
    "amex-gold",
    "sc-ultimate",
    "axis-magnus-burgundy",
    "amex-platinum-reserve",
    "amex-smartearn",
    "sc-beyond",
    "axis-magnus",
    "amex-platinum",
  ],
  "category-rent-payment": [
    "hsbc-premier",
    "amex-membership-rewards",
    "hsbc-travelone",
    "amex-platinum-travel",
    "amex-gold",
    "sc-ultimate",
    "axis-magnus-burgundy",
    "amex-platinum-reserve",
    "amex-smartearn",
    "sc-beyond",
    "axis-magnus",
    "amex-platinum",
  ],
  "category-utilities": [
    "indusind-pioneer-legacy",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "hdfc-marriott-bonvoy",
    "sc-ultimate",
    "indusind-eazydiner",
    "amex-gold",
    "indigo-sbi-elite",
    "indusind-pinnacle",
    "phonepe-sbi-select-black",
    "hdfc-phonepe-ultimo",
    "sbi-card-pulse",
  ],
  "category-utility-bills": [
    "indusind-pioneer-legacy",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "hdfc-marriott-bonvoy",
    "sc-ultimate",
    "indusind-eazydiner",
    "amex-gold",
    "indigo-sbi-elite",
    "indusind-pinnacle",
    "phonepe-sbi-select-black",
    "hdfc-phonepe-ultimo",
    "sbi-card-pulse",
  ],
  "combo-dining-under-5000": [
    "hdfc-marriott-bonvoy",
    "hdfc-swiggy",
    "hdfc-swiggy-orange",
    "hsbc-live-plus",
    "hsbc-rupay-cashback",
    "hdfc-swiggy-black",
    "indusind-eazydiner",
    "yes-paisabazaar-paisasave",
    "landmark-rewards-sbi-prime",
    "sbi-card-prime",
    "bobcard-eterna",
    "axis-fibe",
  ],
  "combo-premium-travel": [
    "bobcard-etihad-guest-premium",
    "axis-indigo-premium",
    "axis-atlas",
    "krisflyer-sbi-apex",
    "aurum-sbi",
    "icici-adani-one-signature",
    "sc-ultimate",
    "amex-platinum-travel",
    "equitas-powermiles",
    "idfc-mayura",
    "rbl-icon",
    "indusind-celesta",
  ],
  "exact-card-atlas": [
    "axis-atlas",
    "axis-magnus-burgundy",
    "axis-magnus",
    "axis-flipkart-super-elite",
    "axis-airtel",
    "axis-horizon",
    "axis-cashback",
    "axis-indigo-premium",
    "axis-ace",
    "axis-flipkart",
    "axis-samsung-signature",
    "axis-fibe",
  ],
  "forex": [
    "icici-emeralde-private-metal",
    "indusind-pioneer-legacy",
    "hdfc-infinia-metal",
    "kotak-infinite",
    "hsbc-premier",
    "amex-gold",
    "axis-magnus-burgundy",
    "sc-ultimate",
    "hdfc-diners-club-black-metal",
    "amex-membership-rewards",
    "hdfc-marriott-bonvoy",
    "equitas-powermiles",
  ],
  "forex-zero": [
    "au-ixigo",
    "bobcard-etihad-guest-premium",
    "kotak-solitaire",
    "idfc-mayura",
    "rbl-world-safari",
    "indusind-pioneer-heritage-metal",
    "idfc-wow",
    "scapia-federal",
    "scapia-bobcard",
  ],
  "guest-lounge-query": [
    "hsbc-premier",
    "axis-magnus-burgundy",
    "axis-magnus",
    "kotak-solitaire",
    "kotak-white-reserve",
    "yes-marquee",
    "sc-beyond",
    "idfc-mayura",
    "axis-reserve",
  ],
  "intl-lounge-query": [
    "icici-emeralde-private-metal",
    "indusind-pioneer-legacy",
    "hdfc-infinia-metal",
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "axis-magnus-burgundy",
    "sc-ultimate",
    "hdfc-marriott-bonvoy",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "indigo-sbi-elite",
    "axis-magnus",
  ],
  "issuer-amex": [
    "amex-gold",
    "amex-membership-rewards",
    "amex-platinum-travel",
    "amex-smartearn",
    "amex-platinum-reserve",
    "amex-platinum",
  ],
  "issuer-axis": [
    "axis-magnus-burgundy",
    "axis-atlas",
    "axis-airtel",
    "axis-magnus",
    "axis-indigo-premium",
    "axis-flipkart-super-elite",
    "axis-cashback",
    "axis-ace",
    "axis-horizon",
    "axis-privilege-easy",
    "axis-flipkart",
    "axis-samsung-signature",
  ],
  "issuer-hdfc": [
    "hdfc-infinia-metal",
    "hdfc-diners-club-black-metal",
    "hdfc-marriott-bonvoy",
    "hdfc-regalia-gold",
    "hdfc-swiggy",
    "hdfc-swiggy-orange",
    "hdfc-swiggy-black",
    "hdfc-diners-club-privilege",
    "hdfc-phonepe-ultimo",
    "hdfc-shoppers-stop-black",
    "hdfc-millennia",
    "hdfc-shoppers-stop",
  ],
  "issuer-icici": [
    "icici-emeralde-private-metal",
    "icici-times-black",
    "icici-adani-one-signature",
    "icici-amazon-pay",
    "icici-hpcl-super-saver",
    "icici-coral-rupay",
    "icici-coral",
    "icici-adani-one-platinum",
    "icici-emeralde",
    "icici-sapphiro",
    "icici-sapphiro-rupay",
    "icici-makemytrip",
  ],
  "issuer-sbi": [
    "indigo-sbi-elite",
    "sbi-card-pulse",
    "phonepe-sbi-select-black",
    "indigo-sbi",
    "titan-sbi",
    "krisflyer-sbi-apex",
    "landmark-rewards-sbi-prime",
    "tata-neu-infinity-sbi",
    "sbi-card-elite",
    "sbi-card-miles-elite",
    "sbi-card-miles-prime",
    "sbi-cashback",
  ],
  "lifetime-free": [
    "csb-jupiter-edge-plus",
    "yes-kiwi",
    "hsbc-visa-platinum",
    "au-ixigo",
    "axis-fibe",
    "indusind-eazydiner-platinum",
    "hsbc-rupay-platinum",
    "indusind-tiger",
    "federal-imperio",
    "yes-paisabazaar-paisasave-rupay",
    "axis-kwik",
    "federal-signet",
  ],
  "lounge": [
    "icici-emeralde-private-metal",
    "indusind-pioneer-legacy",
    "hdfc-infinia-metal",
    "kotak-infinite",
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "axis-magnus-burgundy",
    "sc-ultimate",
    "hdfc-marriott-bonvoy",
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "axis-atlas",
  ],
  "lounge-query": [
    "icici-emeralde-private-metal",
    "indusind-pioneer-legacy",
    "hdfc-infinia-metal",
    "hsbc-premier",
    "kotak-infinite",
    "hdfc-diners-club-black-metal",
    "axis-magnus-burgundy",
    "sc-ultimate",
    "hdfc-marriott-bonvoy",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "axis-airtel",
  ],
  "max-fee-5000-query": [
    "kotak-infinite",
    "amex-gold",
    "amex-membership-rewards",
    "sc-ultimate",
    "hdfc-marriott-bonvoy",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "axis-airtel",
    "indusind-eazydiner",
    "amex-platinum-travel",
    "indigo-sbi-elite",
    "axis-indigo-premium",
  ],
  "max-fee-zero": [
    "kotak-infinite",
    "csb-jupiter-edge-plus",
    "kotak-solitaire",
    "yes-kiwi",
    "hsbc-visa-platinum",
    "au-ixigo",
    "axis-fibe",
    "indusind-eazydiner-platinum",
    "icici-amazon-pay",
    "hsbc-rupay-platinum",
    "indusind-tiger",
    "federal-imperio",
  ],
  "merchant-amazon": [
    "cheq-au",
    "icici-amazon-pay",
    "amex-smartearn",
    "hdfc-moneyback-plus",
  ],
  "merchant-flipkart": [
    "axis-flipkart-super-elite",
    "axis-samsung-signature",
    "flipkart-sbi",
    "axis-flipkart",
    "cheq-au",
    "axis-neo",
  ],
  "merchant-swiggy": [
    "axis-airtel",
    "hdfc-swiggy",
    "hdfc-swiggy-orange",
    "hsbc-live-plus",
    "hdfc-swiggy-black",
    "hdfc-diners-club-privilege",
    "hsbc-rupay-cashback",
    "axis-ace",
    "axis-fibe",
    "axis-rewards",
    "axis-select",
    "axis-my-zone",
  ],
  "network-mastercard": [
    "hsbc-premier",
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "sc-ultimate",
    "indusind-pioneer-legacy",
    "hdfc-swiggy",
    "sbi-card-prime",
    "hdfc-swiggy-black",
    "indigo-sbi-elite",
    "sbi-card-elite",
    "hdfc-swiggy-orange",
    "hdfc-millennia",
  ],
  "network-rupay": [
    "indigo-sbi-elite",
    "yes-kiwi",
    "kotak-white-reserve",
    "au-ixigo",
    "yes-reserv",
    "yes-pop-club",
    "reliance-sbi-prime",
    "phonepe-sbi-select-black",
    "hdfc-tata-neu-infinity",
    "tata-neu-infinity-sbi",
    "indigo-sbi",
    "hsbc-rupay-cashback",
  ],
  "network-visa": [
    "sc-priority-visa-infinite",
    "hsbc-visa-platinum",
    "hdfc-infinia-metal",
    "icici-emeralde-private-metal",
    "hdfc-regalia-gold",
    "kotak-solitaire",
    "axis-atlas",
    "hdfc-shoppers-stop-black",
    "bobcard-etihad-guest-premium",
    "yes-marquee",
    "indusind-eazydiner",
    "axis-magnus-burgundy",
  ],
  "segment-beginner": [
    "csb-jupiter-edge-plus",
    "hdfc-swiggy",
    "hsbc-live-plus",
    "yes-kiwi",
    "hsbc-rupay-cashback",
    "hdfc-swiggy-black",
    "axis-airtel",
    "amex-smartearn",
    "hdfc-phonepe-ultimo",
    "cheq-au",
    "hdfc-millennia",
    "hdfc-diners-club-privilege",
  ],
  "segment-mid-premium": [
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "yes-marquee",
    "hdfc-marriott-bonvoy",
    "amex-membership-rewards",
    "hdfc-shoppers-stop-black",
    "indusind-eazydiner",
    "bobcard-eterna",
    "phonepe-sbi-select-black",
    "sbi-card-prime",
    "amex-gold",
    "titan-sbi",
  ],
  "segment-premium": [
    "bobcard-etihad-guest-premium",
    "axis-indigo-premium",
    "amex-platinum-travel",
    "sc-ultimate",
    "equitas-powermiles",
    "aurum-sbi",
    "krisflyer-sbi-apex",
    "icici-adani-one-signature",
    "rbl-icon",
    "idfc-mayura",
    "indusind-celesta",
  ],
  "segment-super-premium": [
    "hsbc-premier",
    "axis-magnus-burgundy",
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "icici-emeralde-private-metal",
    "axis-magnus",
    "kotak-solitaire",
    "icici-times-black",
    "kotak-white-reserve",
    "sc-beyond",
    "amex-platinum-reserve",
    "axis-reserve",
  ],
  "spend-fuel-heavy": [
    "hsbc-premier",
    "hdfc-infinia-metal",
    "icici-emeralde-private-metal",
    "hdfc-diners-club-black-metal",
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "axis-atlas",
    "kotak-solitaire",
    "amex-platinum-travel",
    "hdfc-marriott-bonvoy",
    "axis-magnus-burgundy",
    "sc-ultimate",
  ],
  "spend-high-base": [
    "icici-emeralde-private-metal",
    "indusind-pioneer-legacy",
    "hdfc-infinia-metal",
    "hsbc-premier",
    "kotak-infinite",
    "hdfc-diners-club-black-metal",
    "axis-magnus-burgundy",
    "amex-gold",
    "hsbc-travelone",
    "amex-membership-rewards",
    "sc-ultimate",
    "hdfc-marriott-bonvoy",
  ],
  "spend-international": [
    "hsbc-premier",
    "hdfc-infinia-metal",
    "bobcard-etihad-guest-premium",
    "icici-emeralde-private-metal",
    "equitas-powermiles",
    "yes-marquee",
    "sc-ultimate",
    "icici-times-black",
    "kotak-solitaire",
    "hdfc-regalia-gold",
    "au-ixigo",
    "idfc-mayura",
  ],
  "spend-level-heavy": [
    "icici-emeralde-private-metal",
    "indusind-pioneer-legacy",
    "hdfc-infinia-metal",
    "hsbc-premier",
    "kotak-infinite",
    "amex-gold",
    "hdfc-diners-club-black-metal",
    "axis-magnus-burgundy",
    "amex-membership-rewards",
    "sc-ultimate",
    "hdfc-marriott-bonvoy",
    "hsbc-travelone",
  ],
  "spend-level-light": [
    "icici-emeralde-private-metal",
    "indusind-pioneer-legacy",
    "hdfc-infinia-metal",
    "kotak-infinite",
    "hsbc-premier",
    "amex-gold",
    "axis-magnus-burgundy",
    "amex-membership-rewards",
    "hdfc-diners-club-black-metal",
    "sc-ultimate",
    "hdfc-marriott-bonvoy",
    "hsbc-travelone",
  ],
  "spend-level-mid": [
    "icici-emeralde-private-metal",
    "indusind-pioneer-legacy",
    "hdfc-infinia-metal",
    "hsbc-premier",
    "kotak-infinite",
    "amex-gold",
    "axis-magnus-burgundy",
    "hdfc-diners-club-black-metal",
    "amex-membership-rewards",
    "sc-ultimate",
    "hdfc-marriott-bonvoy",
    "hsbc-travelone",
  ],
  "spend-travel-heavy": [
    "icici-emeralde-private-metal",
    "hsbc-premier",
    "hdfc-infinia-metal",
    "indusind-pioneer-legacy",
    "axis-magnus-burgundy",
    "hdfc-diners-club-black-metal",
    "hsbc-travelone",
    "kotak-infinite",
    "amex-gold",
    "amex-membership-rewards",
    "hdfc-marriott-bonvoy",
    "hdfc-regalia-gold",
  ],
  "usecase-cashback": [
    "axis-airtel",
    "hdfc-swiggy",
    "hdfc-swiggy-orange",
    "hsbc-live-plus",
    "yes-kiwi",
    "hdfc-swiggy-black",
    "titan-sbi",
    "axis-cashback",
    "hsbc-rupay-cashback",
    "kotak-cashback-plus",
    "hdfc-millennia",
    "axis-ace",
  ],
  "usecase-dining": [
    "hdfc-marriott-bonvoy",
    "hdfc-swiggy",
    "hdfc-swiggy-orange",
    "hsbc-live-plus",
    "hsbc-rupay-cashback",
    "hdfc-swiggy-black",
    "indusind-eazydiner",
    "yes-paisabazaar-paisasave",
    "landmark-rewards-sbi-prime",
    "sbi-card-prime",
    "bobcard-eterna",
    "axis-fibe",
  ],
  "usecase-entertainment": [
    "hdfc-marriott-bonvoy",
    "hsbc-live-plus",
    "hdfc-diners-club-privilege",
    "landmark-rewards-sbi-prime",
    "hsbc-rupay-cashback",
    "sbi-card-elite",
    "sbi-card-prime",
    "bpcl-sbi-octane",
    "icici-coral",
    "bobcard-easy",
    "axis-my-zone",
  ],
  "usecase-fuel": [
    "bpcl-sbi-octane",
    "idfc-first-power-plus",
    "hdfc-indianoil",
    "axis-indianoil-easy",
    "icici-hpcl-super-saver",
    "bpcl-sbi",
    "kotak-cashback-plus",
    "idfc-first-power",
    "axis-indianoil",
    "icici-hpcl-coral",
    "axis-indianoil-premium",
    "idfc-first-earn",
  ],
  "usecase-grocery": [
    "hsbc-live-plus",
    "rbl-patanjali-vishisht",
    "rbl-patanjali-swarn",
    "hdfc-swiggy",
    "hdfc-swiggy-orange",
    "hdfc-swiggy-black",
    "hsbc-rupay-cashback",
    "axis-indigo-premium",
    "sbi-card-prime",
    "sc-manhattan-platinum",
    "kotak-cashback-plus",
    "rbl-shoprite",
  ],
  "usecase-online": [
    "indusind-pioneer-legacy",
    "csb-jupiter-edge-plus",
    "axis-cashback",
    "indusind-eazydiner",
    "phonepe-sbi-select-black",
    "kotak-cashback-plus",
    "sbi-cashback",
    "indusind-pinnacle",
    "hdfc-pixel-play",
    "au-ixigo",
    "bobcard-eterna",
    "cheq-au",
  ],
  "usecase-travel": [
    "icici-emeralde-private-metal",
    "indusind-pioneer-legacy",
    "hdfc-infinia-metal",
    "hsbc-premier",
    "kotak-infinite",
    "amex-gold",
    "hdfc-diners-club-black-metal",
    "axis-magnus-burgundy",
    "amex-membership-rewards",
    "sc-ultimate",
    "hdfc-marriott-bonvoy",
    "hdfc-regalia-gold",
  ],
  "usecase-upi": [
    "indigo-sbi-elite",
    "yes-kiwi",
    "kotak-white-reserve",
    "au-ixigo",
    "yes-reserv",
    "yes-pop-club",
    "reliance-sbi-prime",
    "phonepe-sbi-select-black",
    "hdfc-tata-neu-infinity",
    "tata-neu-infinity-sbi",
    "indigo-sbi",
    "hsbc-rupay-cashback",
  ],
}
`;

exports[`ranking golden (representative queries) > produces stable top-N ordering per scenario 1`] = `
{
  "broad-generic": [
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "axis-magnus-burgundy",
    "icici-emeralde-private-metal",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "kotak-solitaire",
    "axis-magnus",
    "yes-marquee",
    "bobcard-etihad-guest-premium",
    "icici-times-black",
  ],
  "category-bill-payments": [
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "indusind-pioneer-legacy",
    "hdfc-marriott-bonvoy",
    "hdfc-phonepe-ultimo",
    "sc-ultimate",
    "phonepe-sbi-select-black",
    "amex-gold",
    "hdfc-indianoil",
    "indusind-eazydiner",
    "sbi-card-prime",
    "cheq-au",
  ],
  "category-education-payments": [
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "amex-membership-rewards",
    "indusind-pioneer-legacy",
    "indusind-eazydiner",
    "axis-atlas",
    "amex-gold",
    "hsbc-premier",
    "sc-ultimate",
    "hdfc-marriott-bonvoy",
    "hdfc-regalia-gold",
    "amex-platinum-travel",
  ],
  "category-rent": [
    "hsbc-premier",
    "hsbc-travelone",
    "amex-platinum-travel",
    "amex-membership-rewards",
    "sc-ultimate",
    "amex-gold",
    "amex-smartearn",
    "axis-magnus-burgundy",
    "amex-platinum-reserve",
    "axis-magnus",
    "sc-beyond",
    "amex-platinum",
  ],
  "category-rent-payment": [
    "hsbc-premier",
    "hsbc-travelone",
    "amex-platinum-travel",
    "amex-membership-rewards",
    "sc-ultimate",
    "amex-gold",
    "amex-smartearn",
    "axis-magnus-burgundy",
    "amex-platinum-reserve",
    "axis-magnus",
    "sc-beyond",
    "amex-platinum",
  ],
  "category-utilities": [
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "indusind-pioneer-legacy",
    "hdfc-marriott-bonvoy",
    "hdfc-phonepe-ultimo",
    "sc-ultimate",
    "phonepe-sbi-select-black",
    "amex-gold",
    "indusind-eazydiner",
    "sbi-card-prime",
    "cheq-au",
    "axis-ace",
  ],
  "category-utility-bills": [
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "indusind-pioneer-legacy",
    "sbi-card-prime",
    "cheq-au",
    "axis-ace",
    "hdfc-marriott-bonvoy",
    "sc-super-value-titanium",
    "hdfc-phonepe-ultimo",
    "sc-ultimate",
    "icici-hpcl-super-saver",
    "phonepe-sbi-select-black",
  ],
  "combo-dining-under-5000": [
    "hdfc-swiggy",
    "hsbc-live-plus",
    "hdfc-swiggy-black",
    "hdfc-swiggy-orange",
    "yes-paisabazaar-paisasave",
    "hdfc-marriott-bonvoy",
    "indusind-eazydiner",
    "bobcard-eterna",
    "sbi-card-prime",
    "hsbc-rupay-cashback",
    "landmark-rewards-sbi-prime",
    "yes-first-preferred",
  ],
  "combo-premium-travel": [
    "bobcard-etihad-guest-premium",
    "axis-indigo-premium",
    "axis-atlas",
    "krisflyer-sbi-apex",
    "aurum-sbi",
    "icici-adani-one-signature",
    "sc-ultimate",
    "amex-platinum-travel",
    "equitas-powermiles",
    "idfc-mayura",
    "rbl-icon",
    "indusind-celesta",
  ],
  "exact-card-atlas": [
    "axis-atlas",
    "axis-magnus-burgundy",
    "axis-magnus",
    "axis-flipkart-super-elite",
    "axis-airtel",
    "axis-horizon",
    "axis-cashback",
    "axis-indigo-premium",
    "axis-ace",
    "axis-flipkart",
    "axis-samsung-signature",
    "axis-fibe",
  ],
  "forex": [
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "axis-magnus-burgundy",
    "hdfc-infinia-metal",
    "equitas-powermiles",
    "icici-emeralde-private-metal",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "bobcard-etihad-guest-premium",
    "axis-magnus",
    "icici-times-black",
    "yes-marquee",
  ],
  "forex-zero": [
    "bobcard-etihad-guest-premium",
    "kotak-solitaire",
    "idfc-mayura",
    "au-ixigo",
    "indusind-pioneer-heritage-metal",
    "rbl-world-safari",
    "idfc-wow",
    "scapia-federal",
    "scapia-bobcard",
  ],
  "guest-lounge-query": [
    "hsbc-premier",
    "axis-magnus-burgundy",
    "kotak-white-reserve",
    "kotak-solitaire",
    "axis-magnus",
    "axis-reserve",
    "yes-marquee",
    "sc-beyond",
    "idfc-mayura",
  ],
  "intl-lounge-query": [
    "hsbc-premier",
    "axis-magnus-burgundy",
    "axis-magnus",
    "yes-marquee",
    "kotak-white-reserve",
    "kotak-solitaire",
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "axis-reserve",
    "icici-times-black",
    "sc-beyond",
    "aurum-sbi",
  ],
  "issuer-amex": [
    "amex-platinum-travel",
    "amex-gold",
    "amex-membership-rewards",
    "amex-platinum-reserve",
    "amex-smartearn",
    "amex-platinum",
  ],
  "issuer-axis": [
    "axis-magnus-burgundy",
    "axis-atlas",
    "axis-magnus",
    "axis-flipkart-super-elite",
    "axis-cashback",
    "axis-horizon",
    "axis-flipkart",
    "axis-samsung-signature",
    "axis-ace",
    "axis-indigo-premium",
    "axis-fibe",
    "axis-airtel",
  ],
  "issuer-hdfc": [
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "hdfc-regalia-gold",
    "hdfc-marriott-bonvoy",
    "hdfc-diners-club-privilege",
    "hdfc-swiggy",
    "hdfc-swiggy-black",
    "hdfc-swiggy-orange",
    "hdfc-tata-neu-infinity",
    "hdfc-phonepe-ultimo",
    "hdfc-shoppers-stop-black",
    "hdfc-millennia",
  ],
  "issuer-icici": [
    "icici-emeralde-private-metal",
    "icici-times-black",
    "icici-adani-one-signature",
    "icici-amazon-pay",
    "icici-emeralde",
    "icici-adani-one-platinum",
    "icici-sapphiro",
    "icici-makemytrip",
    "icici-sapphiro-rupay",
    "icici-coral-rupay",
    "icici-coral",
    "icici-hpcl-coral",
  ],
  "issuer-sbi": [
    "krisflyer-sbi-apex",
    "titan-sbi",
    "tata-neu-infinity-sbi",
    "phonepe-sbi-select-black",
    "aurum-sbi",
    "indigo-sbi-elite",
    "sbi-card-miles-elite",
    "flipkart-sbi",
    "sbi-card-prime",
    "sbi-cashback",
    "sbi-card-elite",
    "sbi-card-miles-prime",
  ],
  "lifetime-free": [
    "csb-jupiter-edge-plus",
    "hsbc-visa-platinum",
    "yes-kiwi",
    "au-ixigo",
    "indusind-tiger",
    "axis-fibe",
    "hsbc-rupay-platinum",
    "yes-paisabazaar-paisasave-rupay",
    "axis-kwik",
    "federal-imperio",
    "federal-signet",
    "idfc-first-wealth",
  ],
  "lounge": [
    "hsbc-premier",
    "axis-magnus-burgundy",
    "kotak-white-reserve",
    "kotak-solitaire",
    "axis-magnus",
    "axis-reserve",
    "yes-marquee",
    "hdfc-diners-club-black-metal",
    "sc-beyond",
    "hdfc-infinia-metal",
    "icici-times-black",
    "indusind-pioneer-heritage-metal",
  ],
  "lounge-query": [
    "hsbc-premier",
    "axis-magnus-burgundy",
    "kotak-white-reserve",
    "kotak-solitaire",
    "axis-magnus",
    "axis-reserve",
    "yes-marquee",
    "hdfc-diners-club-black-metal",
    "sc-beyond",
    "hdfc-infinia-metal",
    "icici-times-black",
    "indusind-pioneer-heritage-metal",
  ],
  "max-fee-5000-query": [
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "kotak-solitaire",
    "bobcard-etihad-guest-premium",
    "sc-ultimate",
    "amex-platinum-travel",
    "equitas-powermiles",
    "hdfc-marriott-bonvoy",
    "equitas-selfe",
    "cheq-au",
    "titan-sbi",
    "amex-membership-rewards",
  ],
  "max-fee-zero": [
    "kotak-solitaire",
    "yes-kiwi",
    "csb-jupiter-edge-plus",
    "hsbc-visa-platinum",
    "icici-amazon-pay",
    "au-ixigo",
    "indusind-tiger",
    "axis-fibe",
    "sc-priority-visa-infinite",
    "kotak-infinite",
    "hsbc-rupay-platinum",
    "yes-paisabazaar-paisasave-rupay",
  ],
  "merchant-amazon": [
    "icici-amazon-pay",
    "cheq-au",
    "hdfc-moneyback-plus",
    "amex-smartearn",
  ],
  "merchant-flipkart": [
    "axis-flipkart-super-elite",
    "axis-flipkart",
    "flipkart-sbi",
    "cheq-au",
    "axis-samsung-signature",
    "axis-neo",
  ],
  "merchant-swiggy": [
    "hdfc-swiggy",
    "hdfc-swiggy-black",
    "hdfc-swiggy-orange",
    "hdfc-diners-club-privilege",
    "hsbc-live-plus",
    "axis-ace",
    "axis-fibe",
    "axis-airtel",
    "hsbc-rupay-cashback",
    "axis-rewards",
    "axis-my-zone",
    "axis-select",
  ],
  "network-mastercard": [
    "hsbc-premier",
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "sc-ultimate",
    "indusind-pioneer-legacy",
    "hdfc-swiggy",
    "sbi-card-prime",
    "hdfc-swiggy-black",
    "indigo-sbi-elite",
    "sbi-card-elite",
    "hdfc-swiggy-orange",
    "hdfc-millennia",
  ],
  "network-rupay": [
    "indigo-sbi-elite",
    "yes-kiwi",
    "kotak-white-reserve",
    "au-ixigo",
    "yes-reserv",
    "yes-pop-club",
    "reliance-sbi-prime",
    "phonepe-sbi-select-black",
    "hdfc-tata-neu-infinity",
    "tata-neu-infinity-sbi",
    "indigo-sbi",
    "hsbc-rupay-cashback",
  ],
  "network-visa": [
    "sc-priority-visa-infinite",
    "hsbc-visa-platinum",
    "hdfc-infinia-metal",
    "icici-emeralde-private-metal",
    "hdfc-regalia-gold",
    "kotak-solitaire",
    "axis-atlas",
    "hdfc-shoppers-stop-black",
    "bobcard-etihad-guest-premium",
    "yes-marquee",
    "indusind-eazydiner",
    "axis-magnus-burgundy",
  ],
  "segment-beginner": [
    "csb-jupiter-edge-plus",
    "hdfc-swiggy",
    "hsbc-live-plus",
    "yes-kiwi",
    "hsbc-rupay-cashback",
    "hdfc-swiggy-black",
    "axis-airtel",
    "amex-smartearn",
    "hdfc-phonepe-ultimo",
    "cheq-au",
    "hdfc-millennia",
    "hdfc-diners-club-privilege",
  ],
  "segment-mid-premium": [
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "yes-marquee",
    "hdfc-marriott-bonvoy",
    "amex-membership-rewards",
    "hdfc-shoppers-stop-black",
    "indusind-eazydiner",
    "bobcard-eterna",
    "phonepe-sbi-select-black",
    "sbi-card-prime",
    "amex-gold",
    "titan-sbi",
  ],
  "segment-premium": [
    "bobcard-etihad-guest-premium",
    "axis-indigo-premium",
    "amex-platinum-travel",
    "sc-ultimate",
    "equitas-powermiles",
    "aurum-sbi",
    "krisflyer-sbi-apex",
    "icici-adani-one-signature",
    "rbl-icon",
    "idfc-mayura",
    "indusind-celesta",
  ],
  "segment-super-premium": [
    "hsbc-premier",
    "axis-magnus-burgundy",
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "icici-emeralde-private-metal",
    "axis-magnus",
    "kotak-solitaire",
    "icici-times-black",
    "kotak-white-reserve",
    "sc-beyond",
    "amex-platinum-reserve",
    "axis-reserve",
  ],
  "spend-fuel-heavy": [
    "hsbc-premier",
    "hdfc-infinia-metal",
    "icici-emeralde-private-metal",
    "hdfc-diners-club-black-metal",
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "axis-atlas",
    "kotak-solitaire",
    "amex-platinum-travel",
    "hdfc-marriott-bonvoy",
    "axis-magnus-burgundy",
    "sc-ultimate",
  ],
  "spend-high-base": [
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "axis-magnus-burgundy",
    "hsbc-travelone",
    "axis-atlas",
    "hdfc-regalia-gold",
    "kotak-solitaire",
    "axis-magnus",
    "bobcard-etihad-guest-premium",
    "indusind-tiger",
  ],
  "spend-international": [
    "hsbc-premier",
    "hdfc-infinia-metal",
    "bobcard-etihad-guest-premium",
    "icici-emeralde-private-metal",
    "equitas-powermiles",
    "yes-marquee",
    "sc-ultimate",
    "icici-times-black",
    "kotak-solitaire",
    "hdfc-regalia-gold",
    "au-ixigo",
    "idfc-mayura",
  ],
  "spend-level-heavy": [
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "icici-emeralde-private-metal",
    "axis-magnus-burgundy",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "axis-atlas",
    "kotak-solitaire",
    "axis-magnus",
    "yes-marquee",
    "bobcard-etihad-guest-premium",
  ],
  "spend-level-light": [
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "icici-emeralde-private-metal",
    "axis-magnus-burgundy",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "axis-atlas",
    "kotak-solitaire",
    "axis-magnus",
    "kotak-white-reserve",
    "yes-marquee",
  ],
  "spend-level-mid": [
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "icici-emeralde-private-metal",
    "axis-magnus-burgundy",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "axis-atlas",
    "kotak-solitaire",
    "axis-magnus",
    "kotak-white-reserve",
    "yes-marquee",
  ],
  "spend-travel-heavy": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "hsbc-travelone",
    "axis-magnus-burgundy",
    "hdfc-diners-club-black-metal",
    "axis-atlas",
    "kotak-solitaire",
    "axis-magnus",
    "hdfc-regalia-gold",
    "bobcard-etihad-guest-premium",
    "hsbc-visa-platinum",
  ],
  "usecase-cashback": [
    "titan-sbi",
    "axis-cashback",
    "hdfc-swiggy",
    "hdfc-swiggy-black",
    "hsbc-live-plus",
    "hdfc-swiggy-orange",
    "axis-flipkart",
    "flipkart-sbi",
    "sbi-cashback",
    "axis-samsung-signature",
    "yes-paisabazaar-paisasave",
    "axis-ace",
  ],
  "usecase-dining": [
    "hdfc-swiggy",
    "hdfc-swiggy-black",
    "hsbc-live-plus",
    "hdfc-swiggy-orange",
    "hdfc-marriott-bonvoy",
    "yes-paisabazaar-paisasave",
    "indusind-eazydiner",
    "bobcard-eterna",
    "sbi-card-prime",
    "hsbc-rupay-cashback",
    "landmark-rewards-sbi-prime",
    "yes-first-preferred",
  ],
  "usecase-entertainment": [
    "hdfc-marriott-bonvoy",
    "hdfc-diners-club-privilege",
    "hsbc-live-plus",
    "sbi-card-prime",
    "sbi-card-elite",
    "bpcl-sbi-octane",
    "landmark-rewards-sbi-prime",
    "hsbc-rupay-cashback",
    "icici-coral",
    "axis-my-zone",
    "bobcard-easy",
  ],
  "usecase-fuel": [
    "bpcl-sbi-octane",
    "idfc-first-power-plus",
    "kotak-cashback-plus",
    "icici-hpcl-super-saver",
    "icici-hpcl-coral",
    "bpcl-sbi",
    "axis-indianoil",
    "axis-indianoil-easy",
    "hdfc-indianoil",
    "axis-indianoil-premium",
    "idfc-first-power",
    "sc-platinum-rewards",
  ],
  "usecase-grocery": [
    "hdfc-swiggy",
    "hdfc-swiggy-black",
    "hsbc-live-plus",
    "hdfc-swiggy-orange",
    "rbl-patanjali-swarn",
    "sbi-card-prime",
    "kotak-cashback-plus",
    "rbl-patanjali-vishisht",
    "axis-indigo-premium",
    "sc-manhattan-platinum",
    "hsbc-rupay-cashback",
    "hdfc-moneyback-plus",
  ],
  "usecase-online": [
    "csb-jupiter-edge-plus",
    "axis-cashback",
    "sbi-cashback",
    "indusind-pioneer-legacy",
    "phonepe-sbi-select-black",
    "indusind-eazydiner",
    "hdfc-pixel-play",
    "bobcard-eterna",
    "kotak-cashback-plus",
    "cheq-au",
    "phonepe-sbi-purple",
    "simplyclick-sbi",
  ],
  "usecase-travel": [
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "axis-magnus-burgundy",
    "icici-emeralde-private-metal",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "axis-atlas",
    "kotak-solitaire",
    "axis-magnus",
    "bobcard-etihad-guest-premium",
    "yes-marquee",
  ],
  "usecase-upi": [
    "indigo-sbi-elite",
    "yes-kiwi",
    "kotak-white-reserve",
    "au-ixigo",
    "yes-reserv",
    "yes-pop-club",
    "reliance-sbi-prime",
    "phonepe-sbi-select-black",
    "hdfc-tata-neu-infinity",
    "tata-neu-infinity-sbi",
    "indigo-sbi",
    "hsbc-rupay-cashback",
  ],
}
`;

exports[`result split golden (reward-type-split) > snapshots the section membership and order for broad queries 1`] = `
{
  "broad-best-card": {
    "Cashback cards": [
      "axis-cashback",
      "flipkart-sbi",
      "axis-flipkart",
      "yes-paisabazaar-paisasave",
      "icici-amazon-pay",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "axis-magnus-burgundy",
      "hdfc-diners-club-black-metal",
      "icici-emeralde-private-metal",
      "hsbc-travelone",
    ],
  },
  "seo-broad-best-cards": {
    "Cashback cards": [
      "axis-cashback",
      "flipkart-sbi",
      "axis-flipkart",
      "yes-paisabazaar-paisasave",
      "icici-amazon-pay",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "axis-magnus-burgundy",
      "hdfc-diners-club-black-metal",
      "icici-emeralde-private-metal",
      "hsbc-travelone",
    ],
  },
}
`;
